tests/unit/unittest/data/complete_extractor_private_function_definition.cpp
@@ -1,0 +1,5 @@
+class Foo {
+    void method();
+};
+
+void Foo::m
